CharmsParser.py
# Generated from CharmsParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CharmsParser ( Parser ):

    grammarFileName = "CharmsParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'='", "'=='", 
                     "'!='", "'<'", "'>'", "'&&'", "'||'", "'('", "')'", 
                     "'{'", "'}'", "';'", "','", "'int'", "'void'", "'bool'", 
                     "'char'", "'if'", "'else'", "'while'", "'print'", "'read'", 
                     "'return'", "'function'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "TIMES", "DIVIDE", "ASSIGN", 
                      "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN", "AND_SYMBOL", 
                      "OR_SYMBOL", "LPARENTHESES", "RPARENTHESES", "LCURLY", 
                      "RCURLY", "SEMICOLON", "COMMA", "INT", "VOID", "BOOL", 
                      "CHAR", "IF", "ELSE", "WHILE", "PRINT", "READ", "RETURN", 
                      "FUNCTION", "ID", "CTE_INT", "CTE_STRING", "WHITESPACE" ]

    RULE_program = 0
    RULE_p = 1
    RULE_p1 = 2
    RULE_p_vars = 3
    RULE_v = 4
    RULE_v1 = 5
    RULE_v2 = 6
    RULE_function = 7
    RULE_f = 8
    RULE_f1 = 9
    RULE_f2 = 10
    RULE_section = 11
    RULE_type_id = 12
    RULE_assignment = 13
    RULE_expression = 14
    RULE_e = 15
    RULE_exp = 16
    RULE_e1 = 17
    RULE_factor = 18
    RULE_fa = 19
    RULE_term = 20
    RULE_t = 21
    RULE_condition = 22
    RULE_c = 23
    RULE_loop = 24
    RULE_read = 25
    RULE_write = 26
    RULE_w = 27
    RULE_w2 = 28
    RULE_var_cte = 29
    RULE_func_call = 30
    RULE_fc = 31

    ruleNames =  [ "program", "p", "p1", "p_vars", "v", "v1", "v2", "function", 
                   "f", "f1", "f2", "section", "type_id", "assignment", 
                   "expression", "e", "exp", "e1", "factor", "fa", "term", 
                   "t", "condition", "c", "loop", "read", "write", "w", 
                   "w2", "var_cte", "func_call", "fc" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    TIMES=3
    DIVIDE=4
    ASSIGN=5
    EQUAL=6
    NOTEQUAL=7
    LESSTHAN=8
    GREATERTHAN=9
    AND_SYMBOL=10
    OR_SYMBOL=11
    LPARENTHESES=12
    RPARENTHESES=13
    LCURLY=14
    RCURLY=15
    SEMICOLON=16
    COMMA=17
    INT=18
    VOID=19
    BOOL=20
    CHAR=21
    IF=22
    ELSE=23
    WHILE=24
    PRINT=25
    READ=26
    RETURN=27
    FUNCTION=28
    ID=29
    CTE_INT=30
    CTE_STRING=31
    WHITESPACE=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p(self):
            return self.getTypedRuleContext(CharmsParser.PContext,0)


        def section(self):
            return self.getTypedRuleContext(CharmsParser.SectionContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CharmsParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.p()
            self.state = 65
            self.section()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p_vars(self):
            return self.getTypedRuleContext(CharmsParser.P_varsContext,0)


        def p1(self):
            return self.getTypedRuleContext(CharmsParser.P1Context,0)


        def function(self):
            return self.getTypedRuleContext(CharmsParser.FunctionContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP" ):
                listener.enterP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP" ):
                listener.exitP(self)




    def p(self):

        localctx = CharmsParser.PContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_p)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.INT, CharmsParser.BOOL, CharmsParser.CHAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.p_vars()
                self.state = 68
                self.p1()
                pass
            elif token in [CharmsParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class P1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(CharmsParser.FunctionContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_p1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP1" ):
                listener.enterP1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP1" ):
                listener.exitP1(self)




    def p1(self):

        localctx = CharmsParser.P1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_p1)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.function()
                pass
            elif token in [CharmsParser.EOF, CharmsParser.PLUS, CharmsParser.MINUS, CharmsParser.LPARENTHESES, CharmsParser.IF, CharmsParser.WHILE, CharmsParser.PRINT, CharmsParser.READ, CharmsParser.RETURN, CharmsParser.ID, CharmsParser.CTE_INT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class P_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_id(self):
            return self.getTypedRuleContext(CharmsParser.Type_idContext,0)


        def v(self):
            return self.getTypedRuleContext(CharmsParser.VContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_p_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_vars" ):
                listener.enterP_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_vars" ):
                listener.exitP_vars(self)




    def p_vars(self):

        localctx = CharmsParser.P_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_p_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.type_id()
            self.state = 78
            self.v()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def v1(self):
            return self.getTypedRuleContext(CharmsParser.V1Context,0)


        def SEMICOLON(self):
            return self.getToken(CharmsParser.SEMICOLON, 0)

        def v2(self):
            return self.getTypedRuleContext(CharmsParser.V2Context,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_v

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV" ):
                listener.enterV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV" ):
                listener.exitV(self)




    def v(self):

        localctx = CharmsParser.VContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_v)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(CharmsParser.ID)
            self.state = 81
            self.v1()
            self.state = 82
            self.match(CharmsParser.SEMICOLON)
            self.state = 83
            self.v2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(CharmsParser.COMMA, 0)

        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def v1(self):
            return self.getTypedRuleContext(CharmsParser.V1Context,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_v1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV1" ):
                listener.enterV1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV1" ):
                listener.exitV1(self)




    def v1(self):

        localctx = CharmsParser.V1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_v1)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(CharmsParser.COMMA)
                self.state = 86
                self.match(CharmsParser.ID)
                self.state = 87
                self.v1()
                pass
            elif token in [CharmsParser.SEMICOLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p_vars(self):
            return self.getTypedRuleContext(CharmsParser.P_varsContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_v2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV2" ):
                listener.enterV2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV2" ):
                listener.exitV2(self)




    def v2(self):

        localctx = CharmsParser.V2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_v2)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.INT, CharmsParser.BOOL, CharmsParser.CHAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.p_vars()
                pass
            elif token in [CharmsParser.EOF, CharmsParser.PLUS, CharmsParser.MINUS, CharmsParser.LPARENTHESES, CharmsParser.IF, CharmsParser.WHILE, CharmsParser.PRINT, CharmsParser.READ, CharmsParser.RETURN, CharmsParser.FUNCTION, CharmsParser.ID, CharmsParser.CTE_INT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CharmsParser.FUNCTION, 0)

        def f(self):
            return self.getTypedRuleContext(CharmsParser.FContext,0)


        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def LPARENTHESES(self):
            return self.getToken(CharmsParser.LPARENTHESES, 0)

        def f1(self):
            return self.getTypedRuleContext(CharmsParser.F1Context,0)


        def RPARENTHESES(self):
            return self.getToken(CharmsParser.RPARENTHESES, 0)

        def LCURLY(self):
            return self.getToken(CharmsParser.LCURLY, 0)

        def section(self):
            return self.getTypedRuleContext(CharmsParser.SectionContext,0)


        def RCURLY(self):
            return self.getToken(CharmsParser.RCURLY, 0)

        def getRuleIndex(self):
            return CharmsParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = CharmsParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(CharmsParser.FUNCTION)
            self.state = 96
            self.f()
            self.state = 97
            self.match(CharmsParser.ID)
            self.state = 98
            self.match(CharmsParser.LPARENTHESES)
            self.state = 99
            self.f1()
            self.state = 100
            self.match(CharmsParser.RPARENTHESES)
            self.state = 101
            self.match(CharmsParser.LCURLY)
            self.state = 102
            self.section()
            self.state = 103
            self.match(CharmsParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(CharmsParser.VOID, 0)

        def type_id(self):
            return self.getTypedRuleContext(CharmsParser.Type_idContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_f

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF" ):
                listener.enterF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF" ):
                listener.exitF(self)




    def f(self):

        localctx = CharmsParser.FContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_f)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.VOID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(CharmsParser.VOID)
                pass
            elif token in [CharmsParser.INT, CharmsParser.BOOL, CharmsParser.CHAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.type_id()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class F1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_id(self):
            return self.getTypedRuleContext(CharmsParser.Type_idContext,0)


        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def f2(self):
            return self.getTypedRuleContext(CharmsParser.F2Context,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_f1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF1" ):
                listener.enterF1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF1" ):
                listener.exitF1(self)




    def f1(self):

        localctx = CharmsParser.F1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_f1)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.INT, CharmsParser.BOOL, CharmsParser.CHAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.type_id()
                self.state = 110
                self.match(CharmsParser.ID)
                self.state = 111
                self.f2()
                pass
            elif token in [CharmsParser.RPARENTHESES]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class F2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(CharmsParser.COMMA, 0)

        def type_id(self):
            return self.getTypedRuleContext(CharmsParser.Type_idContext,0)


        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def f2(self):
            return self.getTypedRuleContext(CharmsParser.F2Context,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_f2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF2" ):
                listener.enterF2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF2" ):
                listener.exitF2(self)




    def f2(self):

        localctx = CharmsParser.F2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_f2)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(CharmsParser.COMMA)
                self.state = 117
                self.type_id()
                self.state = 118
                self.match(CharmsParser.ID)
                self.state = 119
                self.f2()
                pass
            elif token in [CharmsParser.RPARENTHESES]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(CharmsParser.AssignmentContext,0)


        def section(self):
            return self.getTypedRuleContext(CharmsParser.SectionContext,0)


        def condition(self):
            return self.getTypedRuleContext(CharmsParser.ConditionContext,0)


        def write(self):
            return self.getTypedRuleContext(CharmsParser.WriteContext,0)


        def read(self):
            return self.getTypedRuleContext(CharmsParser.ReadContext,0)


        def loop(self):
            return self.getTypedRuleContext(CharmsParser.LoopContext,0)


        def func_call(self):
            return self.getTypedRuleContext(CharmsParser.Func_callContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)




    def section(self):

        localctx = CharmsParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_section)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.assignment()
                self.state = 125
                self.section()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.condition()
                self.state = 128
                self.section()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.write()
                self.state = 131
                self.section()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.read()
                self.state = 134
                self.section()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.loop()
                self.state = 137
                self.section()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.func_call()
                self.state = 140
                self.section()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CharmsParser.INT, 0)

        def BOOL(self):
            return self.getToken(CharmsParser.BOOL, 0)

        def CHAR(self):
            return self.getToken(CharmsParser.CHAR, 0)

        def getRuleIndex(self):
            return CharmsParser.RULE_type_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_id" ):
                listener.enterType_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_id" ):
                listener.exitType_id(self)




    def type_id(self):

        localctx = CharmsParser.Type_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_type_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CharmsParser.INT) | (1 << CharmsParser.BOOL) | (1 << CharmsParser.CHAR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CharmsParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CharmsParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CharmsParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CharmsParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CharmsParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = CharmsParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CharmsParser.ID)
            self.state = 148
            self.match(CharmsParser.ASSIGN)
            self.state = 149
            self.expression()
            self.state = 150
            self.match(CharmsParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(CharmsParser.ExpContext,0)


        def e(self):
            return self.getTypedRuleContext(CharmsParser.EContext,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = CharmsParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.exp()
            self.state = 153
            self.e()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREATERTHAN(self):
            return self.getToken(CharmsParser.GREATERTHAN, 0)

        def exp(self):
            return self.getTypedRuleContext(CharmsParser.ExpContext,0)


        def LESSTHAN(self):
            return self.getToken(CharmsParser.LESSTHAN, 0)

        def getRuleIndex(self):
            return CharmsParser.RULE_e

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE" ):
                listener.enterE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE" ):
                listener.exitE(self)




    def e(self):

        localctx = CharmsParser.EContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_e)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CharmsParser.GREATERTHAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(CharmsParser.GREATERTHAN)
                self.state = 156
                self.exp()
                pass
            elif token in [CharmsParser.LESSTHAN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(CharmsParser.LESSTHAN)
                self.state = 158
                self.exp()
                pass
            elif token in [CharmsParser.RPARENTHESES, CharmsParser.SEMICOLON, CharmsParser.COMMA]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(CharmsParser.TermContext,0)


        def e1(self):
            return self.getTypedRuleContext(CharmsParser.E1Context,0)


        def getRuleIndex(self):
            return CharmsParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = CharmsParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.term()
            self.state = 163
            self.e1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class E1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(CharmsParser.PLUS, 0)

        def exp(self):
            return self.getTypedRuleContext(CharmsParser.ExpContext,0)


        def MINUS(self):
            return self.getToken(CharmsParser.MINUS, 0)

        def getRuleIndex(self):
            return CharmsParser.RULE_e1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE1" ):
                listener.enterE1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE1" ):
                listener.exitE1(self)




    def e1(self):

        localctx = CharmsParser.E1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_e1)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(CharmsParser.PLUS)
                self.state = 166
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(CharmsParser.MINUS)
                self.state = 168
                self.exp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTHESES(self):
            return self.getToken(CharmsParser.LPARENTHESES, 0)
